compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__panic__panic_as_function.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/panic.rs
assertion_line: 27
expression: "\npub fn retstring() {\n  \"wibble\"\n}\npub fn main() {\n  panic as { retstring() <> \"wobble\" }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn retstring() {
  "wibble"
}
pub fn main() {
  panic as { retstring() <> "wobble" }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([retstring/0, main/0]).

-file("project/test/my/mod.gleam", 2).
-spec retstring() -> binary().
retstring() ->
    <<"wibble"/utf8>>.

-file("project/test/my/mod.gleam", 5).
-spec main() -> any().
main() ->
    erlang:error(#{gleam_error => panic,
            message => (<<(retstring())/binary, "wobble"/utf8>>),
            file => <<?FILEPATH/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 6}).
