compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__panic__piped_chain.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/panic.rs
assertion_line: 54
expression: "\n     pub fn main() {\n      \"lets\"\n      |> panic as \"pipe\"\n      |> panic as \"other panic\"\n    }\n    "
snapshot_kind: text
---
----- SOURCE CODE

     pub fn main() {
      "lets"
      |> panic as "pipe"
      |> panic as "other panic"
    }
    

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> any().
main() ->
    _pipe = <<"lets"/utf8>>,
    _pipe@1 = (erlang:error(#{gleam_error => panic,
            message => <<"pipe"/utf8>>,
            file => <<?FILEPATH/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 4}))(_pipe),
    (erlang:error(#{gleam_error => panic,
            message => <<"other panic"/utf8>>,
            file => <<?FILEPATH/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 5}))(_pipe@1).
